--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>MEAN-Library</title>
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
     <h1>Working on scaffolding!!</h1>
