--- a/public/app/views/pages/logout.html
+++ b/public/app/views/pages/logout.html
@@ -2,6 +2,6 @@
     <h1>Thanks for Using Mean-Library</h1>
     <div>
         <p>Read a book and come back soon!</p>
-        <a ng-href="/login" class="btn btn-primary">Login Back In</a>
+        <a ng-href="/login" class="btn btn-primary">Log Back In</a>
     </div>
 </div>
