--- a/public/app/views/pages/logout.html
+++ b/public/app/views/pages/logout.html
@@ -1,7 +1,7 @@
 <div class="jumbotron text-center">
     <h1>Thanks for Using Mean-Library</h1>
     <div>
-        <p>Read a book and come back soon!</p>
+        <p class="center">Read a book and come back soon!</p>
         <a ng-href="/login" class="btn btn-primary">Log Back In</a>
     </div>
 </div>
