All base feature added. Ready to setup deployment for heroku.

--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -3,19 +3,19 @@
         <legend>Login</legend>
         <fieldset>
             <div class="form-group">
-                <label for="username" class="col-lg-2 control-label">Username</label>
-                <div class="col-lg-10">
+                <label for="username" class="col-sm-2 control-label">Username</label>
+                <div class="col-sm-10">
                     <input class="form-control" id="username" placeholder="Username" autocomplete="off" type="text" name="username" ng-model="login.loginData.username">  
                 </div>
             </div>
             <div class="form-group">
-                <label for="password" class="col-lg-2 control-label">Password</label>
-                <div class="col-lg-10">
+                <label for="password" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
                     <input class="form-control" id="password" placeholder="Password" autocomplete="off" type="password" name="password" ng-model="login.loginData.password">  
                 </div>
             </div>
             <div class="form-group">
-              <div class="col-lg-10 col-lg-offset-2">
+              <div class="col-sm-10 col-sm-offset-2">
                 <button type="submit" class="btn btn-success">Login</button>
               </div>
             </div>
