--- a/public/app/views/pages/signup.html
+++ b/public/app/views/pages/signup.html
@@ -3,25 +3,25 @@
         <legend>Signup!</legend>
         <fieldset>
             <div class="form-group">
-                <label for="username" class="col-lg-2 control-label">Username</label>
-                <div class="col-lg-10">
+                <label for="username" class="col-sm-2 control-label">Username</label>
+                <div class="col-sm-10">
                     <input class="form-control" id="username" placeholder="Username" autocomplete="off" type="text" name="username" ng-model="user.userData.name">  
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-lg-2 control-label">Name</label>
-                <div class="col-lg-10">
+                <label for="name" class="col-sm-2 control-label">Name</label>
+                <div class="col-sm-10">
                     <input class="form-control" id="name" placeholder="Name" autocomplete="off" type="text" name="name" ng-model="user.userData.username">  
                 </div>
             </div>
             <div class="form-group">
-                <label for="password" class="col-lg-2 control-label">Password</label>
-                <div class="col-lg-10">
+                <label for="password" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
                     <input class="form-control" id="password" placeholder="Password" autocomplete="off" type="password" name="password" ng-model="user.userData.password">  
                 </div>
             </div>
             <div class="form-group">
-              <div class="col-lg-10 col-lg-offset-2">
+              <div class="col-sm-10 col-sm-offset-2">
                 <button type="submit" class="btn btn-success">Create Account</button>
               </div>
             </div>
