--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -11,11 +11,14 @@
     <!-- CDNS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.min.js"></script>
+    <!-- Socket IO -->
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <!-- Services -->
     <script type="text/javascript" src="app/services/authService.js"></script>
     <script type="text/javascript" src="app/services/userService.js"></script>
     <script type="text/javascript" src="app/services/bookService.js"></script>
-
+    <!-- Directives -->
+    <script type="text/javascript" src="app/directives/reverse.js"></script>
     <!-- Controllers -->
     <script type="text/javascript" src="app/controllers/mainController.js"></script>
     <script type="text/javascript" src="app/controllers/userController.js"></script>
@@ -40,11 +43,13 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
           <ul class="nav navbar-nav">
+            <li><a href="/allBooks">All Reviews</a></li>
             <li ng-if="!main.loggedIn"><a href="/login">Login <span class="sr-only">(current)</span></a></li>
             <li ng-if="!main.loggedIn"><a href="/signup">Signup</a></li>
             <li ng-if="main.loggedIn"><a href="#">Hello {{ main.user.name }}</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li ng-if="main.loggedIn"><a href="/">Home</a></li>
             <li ng-if="main.loggedIn"><a href="#" ng-click="main.doLogout()">Logout</a></li>
           </ul>
         </div>
