--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -13,10 +13,10 @@
     </div>
     <!-- Enter a new book review -->
     <div class="row" ng-if="main.loggedIn" ng-controller="BookController as book">
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-1">
             <!-- Span Div -->
         </div>
-        <div class="panel panel-primary col-md-6">
+        <div class="panel panel-primary col-md-6 col-xs-10">
           <div class="panel-heading">
             <h3 class="panel-title">Tell everyone about a book!</h3>
           </div>
@@ -24,22 +24,22 @@
             <form class="form-horizontal" mehtod="post" ng-submit="book.createBook()">
                 <fieldset>
                     <div class="form-group">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <input class="form-control" id="title" placeholder="Title" autocomplete="off" type="text" name="Title" ng-model="book.bookData.title">  
                         </div>
                     </div>                    
                     <div class="form-group">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <input class="form-control" id="author" placeholder="Author" autocomplete="off" type="text" name="author" ng-model="book.bookData.author">  
                         </div>
                     </div>                    
                     <div class="form-group">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <textarea class="form-control" rows="3" id="content" placeholder="Write about the book" autocomplete="off" type="text" name="content" ng-model="book.bookData.content"></textarea>  
                         </div>
                     </div>                    
                     <div class="form-group">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <select class="form-control" id="rating" name="Rating" placeholer="Rate It" ng-model="book.bookData.rating">
                               <option value="" disabled selected>Give it a rating!</option>
                               <option>1</option>
@@ -56,8 +56,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                      <div class="col-lg-12">
-                        <button type="cancel" class="btn btn-danger">Clear</button>
+                      <div class="col-md-12">
+                        <button type="reset" class="btn btn-danger" ng-click="clearForm()">Clear</button>
                         <button type="submit" class="btn btn-success">Create Review</button>
                       </div>
                     </div>
@@ -65,17 +65,17 @@
             </form>
           </div>
         </div> <!--End of Panel -->
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-1">
             <!-- Span Div -->
         </div>
     </div>
     <!-- Previous Entries -->
     <div ng-if="main.loggedIn" class="review-container row" ng-controller="BookController as book">
-        <div class="row" ng-repeat="book in book.books">
-            <div class="col-md-3">
+        <div class="row" ng-repeat="book in book.books | reverse">
+            <div class="col-md-3 col-xs-1">
                 <!-- Span Div -->
             </div>
-            <div class="panel panel-success col-md-6">
+            <div class="panel panel-success col-md-6 col-xs-10">
               <div class="panel-heading">
                 <h3 class="panel-title">{{ book.title }}</h3>
               </div>
@@ -97,7 +97,7 @@
                   </div>
                 </div>
             </div> <!--End of Panel -->
-            <div class="col-md-3">
+            <div class="col-md-3 col-xs-1">
                 <!-- Span Div -->
             </div>
         </div>
