Added in notifications so the user knows at least a little about what is happening.

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -7,10 +7,12 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/angular-toastr.min.css">
     <link rel="stylesheet" href="styles/styles.css">
     <!-- CDNS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-animate.min.js"></script>
     <!-- Socket IO -->
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <!-- Services -->
@@ -65,6 +67,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
+    <!-- Angular Toaster -->
+    <script text="text/javascript" src="app/vendor/angular-toastr.min.js"></script>
+    <script text="text/javascript" src="app/vendor/angular-toastr.tpls.min.js"></script>
 </body>
 </html>
